tests/sema/ok/02_arrays.sg
let xs:int[] = [1,2,3];
let a:int = xs[0];
