tests/sema/bad/12_ref_array_mix.sg
let a:&int[] = [1,2]; // &int[] нужно трактовать как &(int[]) или & (int) []? Сейчас это & (int[]) — но значение не подходит; покроем ошибкой типов при инициализации
